# github-mcp-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: security.yml  test.yml
src/github_mcp/: __init__.py  gh_client.py  mcp.py
tests/: __init__.py  test_gh_client.py  test_mcp.py
